fixed tabs on IE, fixed width of text fields on FF

--- a/src/main/webapp/css/autoSuggest.css
+++ b/src/main/webapp/css/autoSuggest.css
@@ -44,7 +44,7 @@ ul.as-selections {
 	width:100px;
 }
 .cells{
-	min-width:82px;
+	min-width:79px;
 }
 #date_cell{
 	min-width:310px;
