--- a/src/main/webapp/css/tabber.css
+++ b/src/main/webapp/css/tabber.css
@@ -56,28 +56,28 @@ background:
     linear,
     left bottom,
     left top,
-	color-stop(0.09, rgb(150,200,100)),
-    color-stop(0.55, rgb(150,200,100)),
-    color-stop(0.78, rgb(182,222,143))
+	color-stop(0.09, rgb(150,150,150)),
+    color-stop(0.55, rgb(150,150,150)),
+    color-stop(0.78, rgb(200,200,200))
     );
 background:
     -moz-linear-gradient(
     center bottom,
-    rgb(150,200,100) 9%,
-    rgb(150,200,100) 55%,
-    rgb(182,222,143) 78%
+    rgb(150,150,150) 9%,
+    rgb(150,150,150) 55%,
+    rgb(200,200,200) 78%
     );
 background-image: 
 	-o-linear-gradient(
 	90deg,
-	rgb(150,200,100)  9%,
-	rgb(150,200,100)  55%,
-	rgb(182,222,143)  78%
+	rgb(150,150,150)  9%,
+	rgb(150,150,150)  55%,
+	rgb(200,200,200)  78%
 	);
 filter:progid:DXImageTransform.Microsoft.gradient(
 	GradientType=0,
-	startColorstr=#b6de8f,
-	endColorstr=#96c864
+	startColorstr=#c8c8c8,
+	endColorstr=#969696
 	);
 }
 ul.tabbernav li a
@@ -124,42 +124,11 @@ ul.tabbernav li a:visited {
 color: #fff; 
 text-shadow:1px 1px 1px #333;
 }
-ul.tabbernav li a:hover
-{
-color: #fff;
-text-shadow:1px 1px 1px #333;
-background:
-    -webkit-gradient(
-    linear,
-    left bottom,
-    left top,
-	color-stop(0.09, rgb(150,150,150)),
-    color-stop(0.55, rgb(150,150,150)),
-    color-stop(0.78, rgb(200,200,200))
-    );
-background:
-    -moz-linear-gradient(
-    center bottom,
-    rgb(150,150,150) 9%,
-    rgb(150,150,150) 55%,
-    rgb(200,200,200) 78%
-    );
-background-image: 
-	-o-linear-gradient(
-	90deg,
-	rgb(150,150,150)  9%,
-	rgb(150,150,150)  55%,
-	rgb(200,200,200)  78%
-	);
-filter:progid:DXImageTransform.Microsoft.gradient(
-	GradientType=0,
-	startColorstr=#c8c8c8,
-	endColorstr=#969696
-	);
-}
+
 ul.tabbernav li.tabberactive a
 {
 color: #fff;
+background:#969696;
 text-shadow:1px 1px 1px #333;
 background:
     -webkit-gradient(
@@ -224,9 +193,37 @@ filter:progid:DXImageTransform.Microsoft.gradient(
 	endColorstr=#969696
 	);
 }
-.tabberlive .tabbertab h2 {
-display:none;
-}
-.tabberlive .tabbertab h3 {
-display:none;
+ul.tabbernav li a:hover
+{
+color: #fff;
+background:#969696;
+text-shadow:1px 1px 1px #333;
+background:
+    -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+	color-stop(0.09, rgb(150,150,150)),
+    color-stop(0.55, rgb(150,150,150)),
+    color-stop(0.78, rgb(200,200,200))
+    );
+background:
+    -moz-linear-gradient(
+    center bottom,
+    rgb(150,150,150) 9%,
+    rgb(150,150,150) 55%,
+    rgb(200,200,200) 78%
+    );
+background-image: 
+	-o-linear-gradient(
+	90deg,
+	rgb(150,150,150)  9%,
+	rgb(150,150,150)  55%,
+	rgb(200,200,200)  78%
+	);
+filter:progid:DXImageTransform.Microsoft.gradient(
+	GradientType=0,
+	startColorstr=#c8c8c8,
+	endColorstr=#969696
+	);
 }
